<resources>
    <string name="app_name">CheckIt</string>
    <string name="version_text">VERSION 1.0.0 - BETA</string>
    <string name="content_desc_logo">Checkmark Logo</string>
    <string name="username_hint">Enter your username</string>
    <string name="password_hint">••••••••</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_button_text">Login</string>
    <string name="signup_prompt">Don\'t have an account? <b><font color="#6750A4">Sign up</font></b></string>
    <string name="email_label">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="username_hint_signup">Choose a username</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="confirm_password_hint">Confirm your password</string>
    <string name="signup_button_text">Signup</string>
    <string name="login_prompt">Already have an account? <b><font color="#6750A4">Log in</font></b></string>
    <string name="my_tasks">My Tasks</string>
    <string name="queue_header">Queue</string>
    <string name="tasks_left">3 Tasks Left</string>
    <string name="task_1_title">Weekly Grocery Run</string>
    <string name="task_1_subtitle">Household</string>
    <string name="task_2_title">Morning Meditation</string>
    <string name="task_2_subtitle">Daily Routine</string>
    <string name="task_3_title">Check emails</string>
    <string name="task_3_subtitle">Work</string>
    <string name="hi_user">Hi, User!</string>
    <string name="user_email">user@example.com</string>
    <string name="switch_account">Switch account</string>
    <string name="account_1_name">Alex Johnson</string>
    <string name="account_1_email">alex.j@example.com</string>
    <string name="account_2_name">Jordan Smith</string>
    <string name="account_2_email">j.smith@work.com</string>
    <string name="account_3_name">Sam Wilson</string>
    <string name="account_3_email">sam.w@personal.com</string>
    <string name="add_another_account">Add another account</string>
    <string name="view_dev_info">View Developer Information</string>
    <string name="dev_info_title">Dev Info</string>
    <string name="dev_identity_header">DEVELOPER IDENTITY</string>
    <string name="dev_name">Movin Vinusandha</string>
    <string name="student_id_label">Student ID</string>
    <string name="student_id_value">2023t01853</string>
    <string name="department_label">Department</string>
    <string name="department_value">ICT</string>
    <string name="contact_label">Contact</string>
    <string name="contact_value">2023t01853@stu.cmb.ac.lk</string>
    <string name="system_version_label">System Version</string>
    <string name="user_info_title">User Info</string>
    <string name="user_name">Alex Rivers</string>
    <string name="user_job_title">Senior Design Architect</string>
    <string name="email_address_label">EMAIL ADDRESS</string>
    <string name="user_email_value">alexrivers@gmail.com</string>
    <string name="timezone_label">TIMEZONE</string>
    <string name="timezone_value">Pacific Standard Time (GMT-8)</string>
    <string name="edit_profile_btn">Edit Profile</string>
    <string name="sign_out_btn">Sign-out</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="full_name_label">Full Name</string>
    <string name="job_title_label">Job Title</string>
    <string name="save_changes_btn">Save Changes</string>
    <string name="discard_changes_btn">Discard Changes</string>
    <string name="new_task_header">New task</string>
    <string name="add_details_hint">Add details</string>
    <string name="save_btn">Save</string>
    <string name="category_hint">Add a category (e.g., Work, Household)</string>
</resources>